# the-viral-network

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
examples/: benchmark_optimizations.py  demo_optimized_1m.py  simple_demo.py  test_fast_graph_generation.py  test_fast_graph_quick.py  test_optimizations.py
examples/configs/: macro_world.json  micro_200k.json  toy_linear_chain.json
examples/notebooks/: demo.ipynb
tests/: __init__.py  test_simulation.py
viral_network/: __init__.py  benchmarks.py  cli.py  config.py  graph_generation.py  graph_generation_optimized.py  metrics.py  numba_kernels.py  simulate_macro.py  simulate_micro.py  simulate_micro_optimized.py  targets.py  viz.py
