[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "viral-network"
version = "0.1.0"
description = "Simulate message propagation in a global social network with cluster structure"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}
]
keywords = ["network", "simulation", "epidemiology", "graph", "SBM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "numba>=0.57.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
    "ruff>=0.10.0",
    "jupyter>=1.0.0",
    "ipython>=8.15.0",
    "numba>=0.57.0",
]

[project.scripts]
viral-network = "viral_network.cli:app"

[tool.poetry]
name = "viral-network"
version = "0.1.0"
description = "Simulate message propagation in a global social network"
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.10.0"
networkx = "^3.0"
matplotlib = "^3.7.0"
plotly = "^5.14.0"
typer = "^0.9.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
loguru = "^0.7.0"
tqdm = "^4.65.0"
numba = "^0.57.0"
psutil = "^5.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.9.0"
ruff = "^0.10.0"
jupyter = "^1.0.0"
ipython = "^8.15.0"
numba = "^0.57.0"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=viral_network --cov-report=term-missing"

